--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ server.servlet.context-path=
 
 #----- print sql query in console -------
 #logging.level.org.springframework=WARN
-logging.level.MybatisRedisXML.MapperConfig=DEBUG
+logging.level.MybatisXML.MapperConfig=debug
+mybatis.mapper-locations=classpath:mybatis/*.xml
 
 #----- message source bundle message source use.!!!!!-------
 spring.messages.basename=i18n.login
